# OneHeroRush

./: .gitignore  README.md  pyproject.toml
OneHeroRush/: manage.py
OneHeroRush/OneHeroRush/: asgi.py  settings.py  urls.py  wsgi.py
OneHeroRush/Users/: models.py  serializers.py  urls.py  views.py
OneHeroRush/Users/migrations/: 0001_initial.py  0002_remove_user_email_user_nik.py  0003_remove_user_nik.py
